[gd_scene load_steps=159 format=2]

[ext_resource path="res://cycle/player/one_paunch/paunch.gd" type="Script" id=1]
[ext_resource path="res://cycle/player/one_paunch/paunch_a_100x100-sheet.png" type="Texture" id=2]
[ext_resource path="res://cycle/player/one_paunch/paunch_b_100x100-sheet.png" type="Texture" id=3]
[ext_resource path="res://cycle/player/one_paunch/paunch_c_100x100-sheet.png" type="Texture" id=4]
[ext_resource path="res://cycle/player/one_paunch/paunch_d_100x100-sheet.png" type="Texture" id=5]
[ext_resource path="res://cycle/player/one_paunch/paunch_e_100x100-sheet.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 20 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 50, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 250, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 0, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 50, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 100, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 150, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 200, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 250, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 0, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 50, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 100, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 150, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 200, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 250, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 0, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 50, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 100, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 150, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 200, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 250, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 0, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 50, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 100, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 150, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 200, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 250, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 50, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 4 )
region = Rect2( 250, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 4 )
region = Rect2( 0, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 4 )
region = Rect2( 50, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 4 )
region = Rect2( 100, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 4 )
region = Rect2( 150, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 4 )
region = Rect2( 200, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 4 )
region = Rect2( 250, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 4 )
region = Rect2( 0, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 4 )
region = Rect2( 50, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 4 )
region = Rect2( 100, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 4 )
region = Rect2( 150, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 4 )
region = Rect2( 200, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 4 )
region = Rect2( 250, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 4 )
region = Rect2( 0, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 4 )
region = Rect2( 50, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 4 )
region = Rect2( 100, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 4 )
region = Rect2( 150, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 4 )
region = Rect2( 200, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 4 )
region = Rect2( 250, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 4 )
region = Rect2( 0, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 4 )
region = Rect2( 50, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 4 )
region = Rect2( 100, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 4 )
region = Rect2( 150, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 4 )
region = Rect2( 200, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 4 )
region = Rect2( 250, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 250, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 50, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 100, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 150, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 200, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 250, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 50, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 100, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 150, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 200, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 250, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 50, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 100, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 150, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 200, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 250, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 50, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 100, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 150, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 200, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 250, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 5 )
region = Rect2( 50, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 5 )
region = Rect2( 250, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 5 )
region = Rect2( 0, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 5 )
region = Rect2( 50, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 5 )
region = Rect2( 100, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 5 )
region = Rect2( 150, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 5 )
region = Rect2( 200, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 5 )
region = Rect2( 250, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 5 )
region = Rect2( 0, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 5 )
region = Rect2( 50, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 5 )
region = Rect2( 100, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 5 )
region = Rect2( 150, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 5 )
region = Rect2( 200, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 5 )
region = Rect2( 250, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 5 )
region = Rect2( 0, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 5 )
region = Rect2( 50, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 5 )
region = Rect2( 100, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 5 )
region = Rect2( 150, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 5 )
region = Rect2( 200, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 5 )
region = Rect2( 250, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 5 )
region = Rect2( 0, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 5 )
region = Rect2( 50, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 5 )
region = Rect2( 100, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 5 )
region = Rect2( 150, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 5 )
region = Rect2( 200, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 5 )
region = Rect2( 250, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 6 )
region = Rect2( 50, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 6 )
region = Rect2( 100, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 6 )
region = Rect2( 200, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 6 )
region = Rect2( 250, 0, 50, 100 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 6 )
region = Rect2( 0, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 6 )
region = Rect2( 50, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 6 )
region = Rect2( 100, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 6 )
region = Rect2( 150, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 6 )
region = Rect2( 200, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 6 )
region = Rect2( 250, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 6 )
region = Rect2( 0, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 6 )
region = Rect2( 50, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 6 )
region = Rect2( 100, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 6 )
region = Rect2( 150, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 6 )
region = Rect2( 200, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 6 )
region = Rect2( 250, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 6 )
region = Rect2( 0, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 6 )
region = Rect2( 50, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 6 )
region = Rect2( 100, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 6 )
region = Rect2( 150, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 6 )
region = Rect2( 200, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 6 )
region = Rect2( 250, 300, 50, 100 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 6 )
region = Rect2( 0, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 6 )
region = Rect2( 50, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 6 )
region = Rect2( 100, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 6 )
region = Rect2( 150, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 6 )
region = Rect2( 200, 400, 50, 100 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 6 )
region = Rect2( 250, 400, 50, 100 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": false,
"name": "b",
"speed": 60.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": false,
"name": "c",
"speed": 60.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "a",
"speed": 60.0
}, {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ) ],
"loop": false,
"name": "d",
"speed": 60.0
}, {
"frames": [ SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ) ],
"loop": false,
"name": "e",
"speed": 60.0
} ]

[node name="paunch" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( -14, 0 )
shape = SubResource( 2 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
position = Vector2( -19, 0 )
frames = SubResource( 1 )
animation = "e"
frame = 18

[node name="lifetime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="active_time" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_paunch_body_entered"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
